// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bad image in source should set status 400 1`] = `
Array [
  "Bad request",
]
`;

exports[`Image missing in source should set status 404 1`] = `
Array [
  "Could not find image",
]
`;
